# montyhallsim

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
src/monty/: monty.py
src/montyhall_sim/: monty.py
tests/: conftest.py  test_monty.py
