[metadata]
name = montyhall_sim
description = Monty Hall Simulator
author = Utkarsh Kunwar
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	montyhall_sim
install_requires =
	requests>=2
python_requires = >=3.6
package_dir =
	=src
zip_safe = no
